@@ -46,7 +46,7 @@ class EmployeeRepositoryTest {
 //        Assert, Then
         assertThat(employeeList).isNotNull();
         assertThat(employeeList).isNotEmpty();
-        assertThat(employeeList.get(0).getEmail()).isEqualTo(employee.getEmail());
+        assertThat(employeeList.getFirst().getEmail()).isEqualTo(employee.getEmail());
     }
 
     @Test
